--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -28,6 +28,10 @@
         <activity
             android:name="com.finddreams.adbanner.BaseWebActivity">
         </activity>
+        <activity
+            android:name=".MarketActivity"
+            android:label="@string/app_name" >        
+        </activity>
     </application>
 
 </manifest>
