--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -10,12 +10,12 @@
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />    
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-	
+    
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-         android:theme="@android:style/Theme.NoTitleBar" >
+        android:theme="@android:style/Theme.NoTitleBar">
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name" >
@@ -30,6 +30,18 @@
         </activity>
         <activity
             android:name=".MarketActivity"
+            android:label="@string/app_name" >        
+        </activity>
+        <activity
+            android:name="com.martin.cloudmarket.login.LoginActivity"
+            android:label="@string/app_name" >        
+        </activity>
+        <activity
+            android:name="com.martin.cloudmarket.login.RegistersActivity"
+            android:label="@string/app_name" >        
+        </activity>
+        <activity
+            android:name="com.example.fpay_foruser.Activity_4user"
             android:label="@string/app_name" >        
         </activity>
     </application>
